--- a/Calendar/CardsDay.xaml
+++ b/Calendar/CardsDay.xaml
@@ -13,6 +13,11 @@
             <RowDefinition/>
         </Grid.RowDefinitions>
         <TextBlock Name="number" HorizontalAlignment="Center" Text="TextBlock" VerticalAlignment="Center" FontSize="16" />
-        <Image Source="\images\points.png" Grid.Row="1" Grid.RowSpan="2"/>
+        <Button Name="Button" Grid.Row="1" Grid.RowSpan="2" Background="Gray" BorderBrush="Gray" Click="Button_Click">
+            <Image Source="\images\points.png" Grid.Row="1" Grid.RowSpan="2"/>
+        </Button>
+        
+
+
     </Grid>
 </UserControl>
